# stageplayplain

./: .editorconfig  pyproject.toml  setup.py
.github/workflows/: python-package.yml
examples/: Big-Fish.fountain
screenplain/: main.py  richstring.py  types.py
screenplain/export/: fdx.py  html.py  pdf.py
screenplain/export/courier_prime/: Read me.txt
screenplain/parsers/: fountain.py
tests/: fdx_test.py  files_test.py  fountain_test.py  richstring_test.py
tests/files/: dialogue-with-blank-line.fountain  notes.fountain
tests/visual/: pdf_test.py
