[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "screenplain"
version = "0.12.0"
description = "Convert text file to viewable screenplay."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "Martin Vilcans", email = "screenplain@librador.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "reportlab>=4.4.7",
]

[project.urls]
"Homepage" = "http://www.screenplain.com/"
"Source" = "https://github.com/vilcans/screenplain"

[project.scripts]
screenplain = "screenplain.main:cli"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.11",
    "setuptools>=82.0.1",
    "ty>=0.0.53",
]

[tool.ruff]
src = ["./"]

[tool.ruff.lint]
select = [
    "A",
    "B",
    "ANN",
    "F",
    "I",
    "T20",
    "TID",
    "RUF",
    "UP",
]
ignore = [
    "RUF010",
    "T20"
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ty.rules]
all = "error"

[tool.ty.src]
include = ["./"]
exclude = ["./**/*.fdx", "./**/*.fountain"]
